# HTS_Engine_Android

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/iii/htsengine/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/org/iii/htsengine/: MainActivity.java  TTSEngine.java
app/src/main/java/org/iii/text/chinese/manager/: Parameters.java  TextManageHandler.java  TextManagementCallback.java  TextMessageEvent.java
app/src/main/java/org/iii/text/chinese/manager/service/: TextManageIntentService.java  TextManageService.java
app/src/main/java/org/iii/text/chinese/parser/: StanfordChineseParser.java
app/src/main/java/org/iii/text/chinese/token/: JiebaTextToken.java  MMSeg4jTextToken.java  TextToken.java
app/src/main/java/org/iii/text/chinese/tool/: TextTool.java
app/src/main/jni/: libTTS.cpp  libTTS.h
app/src/main/jni/tts/common/: CString.cpp  CString.h  Type.h  utility.h
app/src/main/jni/tts/synthesis/hts_engine/: CMakeLists.txt
app/src/main/jni/tts/text/: Phone.cpp  Phone.h  TextProcess.cpp  TextProcess.h  Word.cpp  Word.h  WordInfo.cpp  WordInfo.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/iii/htsengine/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
